kubernetes-minikube-scripts/kubernetes-frontend/06-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f my-docker-compose.yml
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f my-docker-compose.yml
        kompose.service.type: LoadBalancer
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
      - image: ankitrajput/frontend-app-react:2.0.0
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 8082
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
