kubernetes-minikube-scripts/kubernetes-frontend/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f my-docker-compose.yml
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    io.kompose.service: frontend
  type: LoadBalancer
status:
  loadBalancer: {}
