kubernetes-minikube-scripts/kubernetes-frontend/08-Ingress-Service-.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8082

          - path: /app1/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
